visual fixes to improve the look on mobile

--- a/public/css/schedule.styl
+++ b/public/css/schedule.styl
@@ -104,3 +104,54 @@ table.time-table
 
 #form-errors
   display none
+
+
+
+@media only screen and (min-width : 320px)
+  .date-controller
+    a
+      font-size .8em
+    .col-xs-12
+      padding 0
+  table.time-table thead
+    h4
+      font-size .75em
+    .pic
+      width 50px
+      height 50px
+
+
+@media only screen and (min-width : 480px)
+  table.time-table thead
+    h4
+      font-size 1em
+    .pic
+      width 80px
+      height 80px
+
+
+@media only screen and (min-width : 768px)
+  table.time-table thead
+    h4
+      font-size 1em
+    .pic
+      width 100px
+      height 100px
+
+
+@media only screen and (min-width : 992px)
+  table.time-table thead
+    h4
+      font-size 1.6em
+    .pic
+      width 130px
+      height 130px
+
+
+@media only screen and (min-width : 1200px)
+  table.time-table thead
+    h4
+      font-size 1.8em
+    .pic
+      width 130px
+      height 130px
